--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -412,10 +412,10 @@ relative clauses, coordination, subordination, etc.
 	\item Relation identification
 	\item Training
 \end{itemize}}} \\
- 5 & IId. & Evaluation: \texttt{smatch} \citep{cai-13} \\
- 5 & IIe. & Cross-lingual issues: Is AMR an Interlingua? \citep{xue-14} \\
- 5 & IIf. & Motivation for graph grammar formalisms \citep{braune-14} \\
- 5 & IIg. & Promising applications (MT, summarization,~etc.) \\
+ 3 & IId. & Evaluation: \texttt{smatch} \citep{cai-13} \\
+% 5 & IIe. & Cross-lingual issues: Is AMR an Interlingua? \citep{xue-14} \\
+ 15 & IIf. & Graph grammar formalisms \citep{quernheim-12,chiang-13,braune-14} \\
+ 2 & IIg. & Promising applications (MT, summarization,~etc.) \\
  5 & \multicolumn{2}{l|}{Conclusion}\\
 \cline{2-3}
 \end{tabular}
