Caption for fig 1, adjust number of attendees

--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -319,10 +319,11 @@ Following that is an outline of the tutorial structure and logistics.
 
 \begin{figure*}\centering
 \includegraphics[width=.87\textwidth]{ginsburg.pdf}
-\caption{A sentence from a political blog (left) and its AMR graph (right). 
-Between them are fragments of the graph that would ideally be aligned to fragments of the sentence. 
-Near-paraphrases like \textit{Ginsburg said that we will be obligated\jmf{sounds more natural: ``are obligated''} to provide contraception to other people.}\ 
-would receive the same AMR.\jmf{This figure seems confusing to me.  I'm not sure what the colors mean.}}
+\caption{A sentence from a political blog (left) and its AMR graph (right).
+The sentence is labeled with fragments of the graph to show their alignments, and the fragments color-coded for clarity.
+%Between them are fragments of the graph that would ideally be aligned to fragments of the sentence. 
+Near-paraphrases like \textit{Ginsburg said that we are obligated to provide contraception to other people.}\ 
+would receive the same AMR.}
 \label{fig:ginsburg}
 \end{figure*}
 
@@ -443,7 +444,7 @@ and extensive documentation of AMR conventions.}
 
 We are prepared to present this tutorial at \mbox{NAACL-HLT} 2015 (Denver) or EMNLP 2015 (Lisbon). 
 NAACL would be our preferred venue.
-We estimate 20--30 attendees.
+We estimate 30--50 attendees.
 
 The presenters' computer will require Internet access.
 Additionally, the annotation exercise will require participants have access to computers
