--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -287,7 +287,7 @@ of the process by which it was created.
 Second, we will survey the state of the art for computation with AMRs. 
 This will focus on the task of parsing English text into AMR graphs, which 
 requires algorithms for alignment, for structured prediction, and for statistical learning. 
-Advances toward AMR-based machine translation and other applications will be reviewed as well.
+We will also discuss graph grammar formalisms that have been recently developed, and future applications such as AMR-based machine translation and summarization.
 \end{abstract}
 
 \section{Introduction}
