--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -320,7 +320,7 @@ Following that is an outline of the tutorial structure and logistics.
 \begin{figure*}\centering
 \includegraphics[width=.87\textwidth]{ginsburg.pdf}
 \caption{A sentence from a political blog (left) and its AMR graph (right).
-The sentence is labeled with fragments of the graph to show their alignments, and the fragments color-coded for clarity.
+The sentence is labeled with fragments of the graph to show their alignments, and the fragments are color-coded for clarity.
 %Between them are fragments of the graph that would ideally be aligned to fragments of the sentence. 
 Near-paraphrases like \textit{Ginsburg said that we are obligated to provide contraception to other people.}\ 
 would receive the same AMR.}
@@ -390,7 +390,7 @@ A tentative outline for the session is as follows
 %\multicolumn{1}{@{}c}{\textbf{Min.}} & \multicolumn{1}{c@{}}{\textbf{Topic}} \\
 \cline{2-3}
 5 & \multicolumn{2}{l|}{Introduction}\\
-  & \textbf{I.} & \textbf{The AMR formalism for English} \citep{amr,amr-guidelines}\\
+  & \textbf{I.} & \textbf{The AMR formalism} \citep{amr,amr-guidelines}\\
 30 & Ia. & How meaning is structured\\
   & \multicolumn{2}{l|}{\parbox{20em}{\begin{itemize}
 	\item Basics: Entities, events, and relations
@@ -398,7 +398,7 @@ A tentative outline for the session is as follows
 relative clauses, coordination, subordination, etc.
 	\item Advanced topics: ignored words, hallucinated concepts, reification, cyclicity %\vspace*{-\baselineskip}
 \end{itemize}}} \\
-10 & Ib. & What is not represented, and how AMR differs from alternative meaning representations\\
+10 & Ib. & What is not represented, cross-lingual implications \citep{xue-14}, and how AMR differs from alternative meaning representations\\
  5 & Ic. & Annotation tools and data resources\\
 20 & Id. & Guided annotation practice with the AMR Editor (\fref{fig:editor})\\
  5 & Ie. & Discussion\\
@@ -415,8 +415,8 @@ relative clauses, coordination, subordination, etc.
 \end{itemize}}} \\
  3 & IId. & Evaluation: \texttt{smatch} \citep{cai-13} \\
 % 5 & IIe. & Cross-lingual issues: Is AMR an Interlingua? \citep{xue-14} \\
- 15 & IIf. & Graph grammar formalisms \citep{quernheim-12,chiang-13,braune-14} \\
- 2 & IIg. & Promising applications (MT, summarization,~etc.) \\
+ 15 & IIe. & Graph grammar formalisms \citep{quernheim-12,chiang-13,braune-14} \\
+ 2 & IIf. & Promising applications (MT, summarization,~etc.) \\
  5 & \multicolumn{2}{l|}{Conclusion}\\
 \cline{2-3}
 \end{tabular}
