--- a/amr.bib
+++ b/amr.bib
@@ -42,7 +42,15 @@
 	pages = {178--186}
 }
 
-
+@inproceedings{quernheim-12,
+	address = {Jeju, Republic of Korea},
+	title = {Towards probabilistic acceptors and transducers for feature structures},
+	booktitle = {Proc. of the Sixth Workshop on Syntax, Semantics and Structure in Statistical Translation},
+	author = {Quernheim, Daniel and Knight, Kevin},
+	month = jul,
+	year = {2012},
+	pages = {76--85}
+}
 
 @inproceedings{chiang-13,
 	address = {Sofia, Bulgaria},
