--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -393,7 +393,7 @@ A tentative outline for the session is as follows
   & \textbf{I.} & \textbf{The AMR formalism} \citep{amr,amr-guidelines}\\
 30 & Ia. & How meaning is structured\\
   & \multicolumn{2}{l|}{\parbox{20em}{\begin{itemize}
-	\item Basics: Entities, events, and relations
+	\item Basics: entities, events, and relations
 	\item Constructions beyond NP V NP PP: focus, modality/negation, control, 
 relative clauses, coordination, subordination, etc.
 	\item Advanced topics: ignored words, hallucinated concepts, reification, cyclicity %\vspace*{-\baselineskip}
