future annotation estimate

--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -296,7 +296,7 @@ The Abstract Meaning Representation formalism \citep[AMR;][]{amr}
 is rapidly emerging as an important practical form of structured sentence semantics. 
 Conceived just a few years ago, AMR has enjoyed momentum thanks to 
 the ongoing development of large-scale annotated corpora 
-(20k sentences annotated; an additional 45k expected by the end of 2015).
+(20k sentences annotated; an additional\nss{total?} 45k expected by the end of 2015).
 It has stimulated research in grammar formalisms for graphs \citep{jones-12,chiang-13,braune-14}
 as well as structured prediction algorithms \citep{flanigan-14}.
 Following on the heels of the Fred Jelinek Memorial Workshop in Prague (summer, 2014), 
